force-app/main/default/objects/Account/fields/Account_Case_Id__c.field-meta.xml
<CustomField>
    <fullName>Account_Case_Id__c</fullName>
    <description>Used to convert the 15-character Id to an 18-character Id</description>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Case Id</label>
    <type>Text</type>
</CustomField>