force-app/main/default/objects/Account/fields/Account_Owner__c.field-meta.xml
<CustomField>
    <fullName>Account_Owner__c</fullName>
    <description>Used to copy the lookup field to a text field.</description>
    <label>Account Owner</label>
    <length>100</length>
    <type>Text</type>
</CustomField>