force-app/main/default/objects/Account/fields/Account_Score__c.field-meta.xml
<CustomField>
    <fullName>Account_Score__c</fullName>
    <description>Calculated and populated from HubSpot and synced to Salesforce</description>
    <inlineHelpText>Used to score accounts based on data quality.</inlineHelpText>
    <label>Data Quality Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>