force-app/main/default/objects/Account/fields/Account_Type__c.field-meta.xml
<CustomField>
    <fullName>Account_Type__c</fullName>
    <inlineHelpText>The account type here</inlineHelpText>
    <label>Account Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>