force-app/main/default/objects/Account/fields/Account_with_Business_Email__c.field-meta.xml
<CustomField>
    <fullName>Account_with_Business_Email__c</fullName>
    <description>Used to identify accounts with contacts that have a work email</description>
    <inlineHelpText>Used to identify accounts with contacts that have a work email</inlineHelpText>
    <label>Account with Business Email</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>