force-app/main/default/objects/Account/fields/accountReachScore6sense__c.field-meta.xml
<CustomField>
    <fullName>accountReachScore6sense__c</fullName>
    <inlineHelpText>A measure of current outreach activities against optimal quality, quantity, and diversity of outreach activities as defined by your company’s historical success on won opportunities. Outbound calls, both marketing and sales mails are analyzed for this measure.</inlineHelpText>
    <label>6sense Account Reach Score</label>
    <length>100</length>
    <type>Text</type>
</CustomField>