force-app/main/default/objects/Account/fields/Accounts_API__c.field-meta.xml
<CustomField>
    <fullName>Accounts_API__c</fullName>
    <label>Accounts API</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Accounts_API</valueSetName>
    </valueSet>
</CustomField>