force-app/main/default/objects/Account/fields/accountUpdateDate6sense__c.field-meta.xml
<CustomField>
    <fullName>accountUpdateDate6sense__c</fullName>
    <inlineHelpText>The latest update date and time when 6sense Scores were updated.</inlineHelpText>
    <label>6sense Account Update Date</label>
    <type>Date</type>
</CustomField>