force-app/main/default/objects/Account/fields/Accredited_Investor__c.field-meta.xml
<CustomField>
    <fullName>Accredited_Investor__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Accredited Investor</label>
    <type>Checkbox</type>
</CustomField>