force-app/main/default/objects/Account/fields/Active_SLA__c.field-meta.xml
<CustomField>
    <fullName>Active_SLA__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used by Customer Care Managers to identify accounts with an Active SLA</description>
    <inlineHelpText>Contact Customer Care leadership for more details into this account&apos;s SLA agreement.</inlineHelpText>
    <label>Active SLA</label>
    <type>Checkbox</type>
</CustomField>