force-app/main/default/objects/Account/fields/AE_Revenue_Team__c.field-meta.xml
<CustomField>
    <fullName>AE_Revenue_Team__c</fullName>
    <label>AE Revenue Team</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ITP/Exchange</fullName>
            </value>
            <value>
                <fullName>Transaction Services</fullName>
            </value>
            <value>
                <fullName>Treasury Services</fullName>
            </value>
            <value>
                <fullName>Partner</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>