force-app/main/default/objects/Account/fields/APY__c.field-meta.xml
<CustomField>
    <fullName>APY__c</fullName>
    <label>APY</label>
    <length>255</length>
    <type>Text</type>
</CustomField>