force-app/main/default/objects/Account/fields/Are_you_currently_working_with_Circle__c.field-meta.xml
<CustomField>
    <fullName>Are_you_currently_working_with_Circle__c</fullName>
    <description>Populated by HS form.</description>
    <label>Are you currently working with Circle?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes, I am a commercial customer of Mint/APIs</fullName>
            </value>
            <value>
                <fullName>Yes, I am a Web3 Services Developer</fullName>
            </value>
            <value>
                <fullName>No, but my company/institution is interested</fullName>
            </value>
            <value>
                <fullName>Commercial customer of Mint/APIs</fullName>
                <isActive>false</isActive>
                <label>Commercial customer of Mint/APIs</label>
            </value>
            <value>
                <fullName>No, but plan to</fullName>
                <isActive>false</isActive>
                <label>No, but plan to</label>
            </value>
            <value>
                <fullName>Retail user of USDC</fullName>
                <isActive>false</isActive>
                <label>Retail user of USDC</label>
            </value>
            <value>
                <fullName>Web3 Services Developer</fullName>
                <isActive>false</isActive>
                <label>Web3 Services Developer</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>