force-app/main/default/objects/Account/fields/Audience_Breakdown__c.field-meta.xml
<CustomField>
    <fullName>Audience_Breakdown__c</fullName>
    <label>Audience Breakdown</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Businesses</fullName>
            </value>
            <value>
                <fullName>Retail</fullName>
            </value>
            <value>
                <fullName>B2B/B2C</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>