force-app/main/default/objects/Account/fields/Became_a_Customer_Date__c.field-meta.xml
<CustomField>
    <fullName>Became_a_Customer_Date__c</fullName>
    <label>Became a Customer Date</label>
    <type>Date</type>
</CustomField>