force-app/main/default/objects/Account/fields/Became_an_Opportunity_Date__c.field-meta.xml
<CustomField>
    <fullName>Became_an_Opportunity_Date__c</fullName>
    <label>Became an Opportunity Date</label>
    <type>Date</type>
</CustomField>