force-app/main/default/objects/Account/fields/Blockchain_Info_Details__c.field-meta.xml
<CustomField>
    <fullName>Blockchain_Info_Details__c</fullName>
    <label>Blockchain Info Details</label>
    <length>255</length>
    <type>Text</type>
</CustomField>