force-app/main/default/objects/Account/fields/Burn_Fee_Communicated__c.field-meta.xml
<CustomField>
    <fullName>Burn_Fee_Communicated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is to be checked off by the BD or CSM to confirm that this customer has been fully briefed on the implications of the Burn Fee.</description>
    <inlineHelpText>This field is to be checked off by the BD or CSM to confirm that a live conversation has happened and that this customer has been fully briefed on the implications of the Burn Fee.</inlineHelpText>
    <label>Burn Fee Communicated</label>
    <type>Checkbox</type>
</CustomField>