force-app/main/default/objects/Account/fields/Business_Description__c.field-meta.xml
<CustomField>
    <fullName>Business_Description__c</fullName>
    <description>Used to describe the customers business model.</description>
    <label>Business Description</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>