force-app/main/default/objects/Account/fields/Business_Development_Owner_Opp__c.field-meta.xml
<CustomField>
    <fullName>Business_Development_Owner_Opp__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Business Development Owner-Opp</label>
    <type>Checkbox</type>
</CustomField>