force-app/main/default/objects/Account/fields/Business_Development_Owner_text__c.field-meta.xml
<CustomField>
    <fullName>Business_Development_Owner_text__c</fullName>
    <description>Used to get the Text Name to be used in Salesloft for email templates</description>
    <formula>Business_Development_Owner__r.FirstName +&quot; &quot;+ Business_Development_Owner__r.LastName</formula>
    <label>Business Development Owner (text)</label>
    <type>Text</type>
</CustomField>