force-app/main/default/objects/Account/fields/Business_Review__c.field-meta.xml
<CustomField>
    <fullName>Business_Review__c</fullName>
    <description>Most Recent Business Review (used by CSMs)</description>
    <inlineHelpText>Most Recent Business Review</inlineHelpText>
    <label>Business Review</label>
    <type>Url</type>
</CustomField>