force-app/main/default/objects/Account/fields/Business_Segment__c.field-meta.xml
<CustomField>
    <fullName>Business_Segment__c</fullName>
    <label>Microsegment</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Asset Manager / Hedge Fund</fullName>
            </value>
            <value>
                <fullName>Blockchains / DAOs / Web 3 Dev &amp; Other</fullName>
            </value>
            <value>
                <fullName>Capital Markets - Other</fullName>
            </value>
            <value>
                <fullName>Crypto Exchanges</fullName>
            </value>
            <value>
                <fullName>DeFi / Crypto Finance</fullName>
            </value>
            <value>
                <fullName>Digital Wallets / Custodians</fullName>
            </value>
            <value>
                <fullName>E-Commerce</fullName>
            </value>
            <value>
                <fullName>Education</fullName>
            </value>
            <value>
                <fullName>Energy / Resources</fullName>
            </value>
            <value>
                <fullName>Entertainment / Media</fullName>
            </value>
            <value>
                <fullName>Financial Services</fullName>
            </value>
            <value>
                <fullName>Fintech</fullName>
            </value>
            <value>
                <fullName>Gaming Platforms / Gaming Studios</fullName>
            </value>
            <value>
                <fullName>Government</fullName>
            </value>
            <value>
                <fullName>Health Care</fullName>
            </value>
            <value>
                <fullName>Insurance</fullName>
            </value>
            <value>
                <fullName>Manufacturing / Engineering / Hardware</fullName>
            </value>
            <value>
                <fullName>Marketing / Professional Services</fullName>
            </value>
            <value>
                <fullName>Market Maker</fullName>
            </value>
            <value>
                <fullName>NFT</fullName>
            </value>
            <value>
                <fullName>Non Profit</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Payouts / Remittances</fullName>
            </value>
            <value>
                <fullName>PSP / Payment Networks / Payment Tech</fullName>
            </value>
            <value>
                <fullName>Retail</fullName>
            </value>
            <value>
                <fullName>Technology</fullName>
            </value>
            <value>
                <fullName>Transportation / Logistics</fullName>
            </value>
            <value>
                <fullName>Travel / Hospitality</fullName>
            </value>
            <value>
                <fullName>VC/PE</fullName>
            </value>
            <value>
                <fullName>Bank</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>