force-app/main/default/objects/Account/fields/CeFi_Yield_App_Rejected_Date__c.field-meta.xml
<CustomField>
    <fullName>CeFi_Yield_App_Rejected_Date__c</fullName>
    <label>CeFi Yield App Rejected Date</label>
    <type>Date</type>
</CustomField>