force-app/main/default/objects/Account/fields/CeFi_Yield_Application_Status__c.field-meta.xml
<CustomField>
    <fullName>CeFi_Yield_Application_Status__c</fullName>
    <label>CeFi Yield Application Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Signed</fullName>
            </value>
            <value>
                <fullName>Pre-Qualified by Sales</fullName>
            </value>
            <value>
                <fullName>Created</fullName>
            </value>
            <value>
                <fullName>Pending Submission</fullName>
            </value>
            <value>
                <fullName>Submitted</fullName>
            </value>
            <value>
                <fullName>Pending Review</fullName>
            </value>
            <value>
                <fullName>Pending Revision</fullName>
            </value>
            <value>
                <fullName>Pending Signature</fullName>
            </value>
            <value>
                <fullName>Confirmed</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Pending Application</fullName>
                <isActive>false</isActive>
                <label>Pending Application</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>