force-app/main/default/objects/Account/fields/CeFi_Yield_Pending_App_Date__c.field-meta.xml
<CustomField>
    <fullName>CeFi_Yield_Pending_App_Date__c</fullName>
    <label>CeFi Yield Pending App Date</label>
    <type>Date</type>
</CustomField>