force-app/main/default/objects/Account/fields/Circle_Account_Application_Status__c.field-meta.xml
<CustomField>
    <fullName>Circle_Account_Application_Status__c</fullName>
    <label>Circle Mint Application Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Invited</fullName>
            </value>
            <value>
                <fullName>Created</fullName>
            </value>
            <value>
                <fullName>Pending Submission</fullName>
            </value>
            <value>
                <fullName>Submitted</fullName>
            </value>
            <value>
                <fullName>Pending Review</fullName>
            </value>
            <value>
                <fullName>Pending Revision</fullName>
            </value>
            <value>
                <fullName>Pending Signature</fullName>
            </value>
            <value>
                <fullName>Confirmed</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>