force-app/main/default/objects/Account/fields/Circle_Account_Approved_Date__c.field-meta.xml
<CustomField>
    <fullName>Circle_Account_Approved_Date__c</fullName>
    <label>Circle Mint Approved Date</label>
    <type>Date</type>
</CustomField>