force-app/main/default/objects/Account/fields/Circle_Alliance_Contact__c.field-meta.xml
<CustomField>
    <fullName>Circle_Alliance_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Populate the contact who will be applying for membership to the Circle Alliance Program</description>
    <inlineHelpText>Populate the contact who will be applying for membership to the Circle Alliance Program</inlineHelpText>
    <label>Circle Alliance Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Circle Alliance Member</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>