force-app/main/default/objects/Account/fields/Circle_Lead_Status__c.field-meta.xml
<CustomField>
    <fullName>Circle_Lead_Status__c</fullName>
    <label>Circle Lead Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Assigned</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Engaged</fullName>
            </value>
            <value>
                <fullName>Released</fullName>
            </value>
            <value>
                <fullName>Advanced</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>