force-app/main/default/objects/Account/fields/Circle_Mint__c.field-meta.xml
<CustomField>
    <fullName>Circle_Mint__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Used to link the Circle Mint associated with the Partner agreement.</description>
    <inlineHelpText>Used to link the Circle Mint associated with the Partner agreement.</inlineHelpText>
    <label>Circle Mint</label>
    <referenceTo>Circle_Account__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>