force-app/main/default/objects/Account/fields/Circle_Ventures_Owner_Meeting_Link__c.field-meta.xml
<CustomField>
    <fullName>Circle_Ventures_Owner_Meeting_Link__c</fullName>
    <description>This is used to get the text value to display in Salesloft</description>
    <formula>Circle_Ventures_Owner__r.Meeting_Link__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Circle Ventures Owner Meeting Link</label>
    <type>Text</type>
</CustomField>