force-app/main/default/objects/Account/fields/Circle_Ventures_Owner_Opp__c.field-meta.xml
<CustomField>
    <fullName>Circle_Ventures_Owner_Opp__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Circle Ventures Owner-Opp</label>
    <type>Checkbox</type>
</CustomField>