force-app/main/default/objects/Account/fields/Circle_Ventures_Owner_text__c.field-meta.xml
<CustomField>
    <fullName>Circle_Ventures_Owner_text__c</fullName>
    <description>This is used to get the text value to display in Salesloft</description>
    <formula>Circle_Ventures_Owner__r.FirstName +&quot; &quot;+ Circle_Ventures_Owner__r.LastName</formula>
    <label>Circle Ventures Owner (text)</label>
    <type>Text</type>
</CustomField>