force-app/main/default/objects/Account/fields/Company_Description__c.field-meta.xml
<CustomField>
    <fullName>Company_Description__c</fullName>
    <description>Include: Problem statement
What makes them a good fit for Alliance 
What is novel about their project?</description>
    <inlineHelpText>Include: Problem statement
What makes them a good fit for Alliance 
What is novel about their project?</inlineHelpText>
    <label>Company Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>