force-app/main/default/objects/Account/fields/Company_Domain_Name__c.field-meta.xml
<CustomField>
    <fullName>Company_Domain_Name__c</fullName>
    <label>Company Domain Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>