force-app/main/default/objects/Account/fields/Company_NAICS_Code_Cognism__c.field-meta.xml
<CustomField>
    <fullName>Company_NAICS_Code_Cognism__c</fullName>
    <label>Company NAICS Code (Cognism)</label>
    <length>155</length>
    <type>Text</type>
</CustomField>