force-app/main/default/objects/Account/fields/Company_Office_Country_Cognism__c.field-meta.xml
<CustomField>
    <fullName>Company_Office_Country_Cognism__c</fullName>
    <label>Company Office Country (Cognism)</label>
    <length>155</length>
    <type>Text</type>
</CustomField>