force-app/main/default/objects/Account/fields/Company_Office_Full_Address_Cognism__c.field-meta.xml
<CustomField>
    <fullName>Company_Office_Full_Address_Cognism__c</fullName>
    <label>Company Office Full Address (Cognism)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>