force-app/main/default/objects/Account/fields/Company_Office_Street_Cognism__c.field-meta.xml
<CustomField>
    <fullName>Company_Office_Street_Cognism__c</fullName>
    <label>Company Office Street (Cognism)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>