force-app/main/default/objects/Account/fields/Company_Phone_Cognism__c.field-meta.xml
<CustomField>
    <fullName>Company_Phone_Cognism__c</fullName>
    <label>Company Phone (Cognism)</label>
    <length>155</length>
    <type>Text</type>
</CustomField>