force-app/main/default/objects/Account/fields/Company_Revenue_Cognism__c.field-meta.xml
<CustomField>
    <fullName>Company_Revenue_Cognism__c</fullName>
    <label>Company Revenue (Cognism)</label>
    <length>155</length>
    <type>Text</type>
</CustomField>